# C-String-Class-Implementation

./: CMakeLists.txt  README.md  String.sln
String/: MyString.cpp  MyString.h  Source.cpp  String.vcxproj  String.vcxproj.filters
enc_temp_folder/d9ab263a3c4fffad73bab0b18d7f64db/: Source.cpp
src/: CMakeLists.txt  mystring.cpp  mystring.h  mystring.m.cpp
test/: CMakeLists.txt  mystring.t.cpp
